# ocgadget

./: .gitignore  README.md  meson_arduino_archlinux_cross.txt  pro-mini-flash.sh
app/: conanfile.txt  meson.build
app/src/: exaocbot.cpp  exaocbot.h  exaocbot_linux.cpp  exaocbot_macos.cpp  exaocbot_usb.cpp  exaocbot_usb.h  input.h  main.cpp  ocgadget.cpp  ocgadget.h  ocgadget_linux.cpp  ocgadget_macos.cpp  ocgadget_windows.cpp  ui.cpp  ui.h  v4l2.cpp  v4l2.h
app/src/capture/: avfoundation.h  avfoundation.mm  capture.cpp  capture.h  capture_linux.cpp  capture_macos.mm  capture_windows.cpp  mediafoundation.cpp  mediafoundation.h  test_cap_src.cpp  test_cap_src.h  v4l2.cpp  v4l2.h
app/src/msg/: msg.cpp  msg.h  msg_linux.cpp  msg_macos.cpp  msg_windows.cpp
app/src/ui/: gl.cpp  imgui.cpp  metal.mm  ui.cpp  ui.h  ui_impl.h
app/src/util/: image.cpp  image.h
circuit/24-pin-jumper/: 24-pin-jumper.pro  24-pin-jumper.sch  24-pin-jumper.sch-bak
circuit/controller/: controller.pro  controller.sch
circuit/exaocbot_lib_fp.pretty/: QFN-56-RP2040.kicad_mod
circuit/fan-controller/: fan-controller.sch  fan-controller.sch-bak
circuit/front-panel/: front-panel.pro  front-panel.sch
hubfirmware/: conanfile.txt  meson.build
hubfirmware/src/: hubfirmware.cpp
msgprotocol/: conanfile.py  meson.build
msgprotocol/src/: exaocbot_usb_protocol.h  ocgadget_usb_protocol.h
